--- a/Insuranceclaim/Views/Account/Login.cshtml
+++ b/Insuranceclaim/Views/Account/Login.cshtml
@@ -14,14 +14,14 @@
             {
                 <div class="alert alert-danger">@ViewBag.ErrorMessage</div>
             }
-            <label>User Type</label>
+            @* <label>User Type</label>
             <select name="usertype" id="usertype" class="form-control" required>
                 <option value="">-- Select User Type --</option>
                 <option value="agent">Agent</option>
                 <option value="Claim Adjuster">Claim Adjuster</option>
                 <option value="admin">Admin</option>
                 <option value="POLICY HOLDER">Policy Holder</option>
-            </select>
+            </select> *@
             <label>Username</label>
             <input type="text" name="username" class="form-control" placeholder="Enter username" required />
             <label>Password</label>
