--- a/Insuranceclaim/Views/Account/SignUp.cshtml
+++ b/Insuranceclaim/Views/Account/SignUp.cshtml
@@ -18,12 +18,12 @@
             {
                 <div class="alert alert-danger">@ViewBag.ErrorMessage</div>
             }
-            <label>User Type</label>
+            @* <label>User Type</label>
             <select id="userType" name="userType" class="form-control" required>
                 <option value="">-- Select User Type --</option>
                 <option value="Agent">Agent</option>
                 <option value="POLICY HOLDER">Policy Holder</option>
-            </select>
+            </select> *@
 
             <label>Email</label>
             <input type="email" name="Email" class="form-control" placeholder="Enter Email" required />
